"fix" spacing in pre tag for now

--- a/random-user/style.css
+++ b/random-user/style.css
@@ -22,7 +22,7 @@ h1 {
 
 .card {
     border: 2px solid #222;
-    padding: 5px;
+    padding: 8px;
     min-width: 300px;
     min-height: 400px;
 }
